vbnc/vbnc/tests/Errors/30023.vb
Public Class SomeClass
    Public WriteOnly Property Prop As Integer
			Get
			End Get
			Set(value As Integer)
			End Set
    End Property
End Class